--- a/build-manifest.json
+++ b/build-manifest.json
@@ -430,7 +430,7 @@
       "imports": []
     },
     "dist/constants/mbtis.json.proxy.js": {
-      "bytes": 15618,
+      "bytes": 15582,
       "imports": []
     },
     "dist/constants/mbti_tags.json.proxy.js": {
@@ -438,7 +438,7 @@
       "imports": []
     },
     "dist/constants/titles.json.proxy.js": {
-      "bytes": 1109,
+      "bytes": 1129,
       "imports": []
     },
     "dist/constants/gender_tags.json.proxy.js": {
@@ -480,7 +480,7 @@
       "imports": []
     },
     "dist/components/Title/Title.svelte.js": {
-      "bytes": 2541,
+      "bytes": 3918,
       "imports": [
         {
           "path": "dist/components/Title/Title.svelte.css",
@@ -497,7 +497,7 @@
       "imports": []
     },
     "dist/components/MBTI/MBTI.svelte.js": {
-      "bytes": 1872,
+      "bytes": 3266,
       "imports": [
         {
           "path": "dist/components/MBTI/MBTI.svelte.css",
@@ -551,7 +551,7 @@
       "imports": []
     },
     "dist/components/Image/RoundedImage.svelte.js": {
-      "bytes": 2032,
+      "bytes": 2040,
       "imports": [
         {
           "path": "dist/components/Image/RoundedImage.svelte.css",
@@ -904,6 +904,27 @@
         }
       ]
     },
+    "dist/components/Image/RoundedEmbed.svelte.css": {
+      "bytes": 102,
+      "imports": []
+    },
+    "dist/components/Image/RoundedEmbed.svelte.js": {
+      "bytes": 2087,
+      "imports": [
+        {
+          "path": "dist/components/Image/RoundedEmbed.svelte.css",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/svelte/internal.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/svelte.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
     "dist/components/MailChimp.svelte.css": {
       "bytes": 42,
       "imports": []
@@ -982,7 +1003,7 @@
           "kind": "import-statement"
         },
         {
-          "path": "dist/components/Image/RoundedImage.svelte.js",
+          "path": "dist/components/Image/RoundedEmbed.svelte.js",
           "kind": "import-statement"
         },
         {
@@ -1146,13 +1167,13 @@
           "bytesInOutput": 344
         },
         "dist/constants/mbtis.json.proxy.js": {
-          "bytesInOutput": 27500
+          "bytesInOutput": 27422
         },
         "dist/constants/mbti_tags.json.proxy.js": {
           "bytesInOutput": 900
         },
         "dist/constants/titles.json.proxy.js": {
-          "bytesInOutput": 1707
+          "bytesInOutput": 1745
         },
         "dist/constants/gender_tags.json.proxy.js": {
           "bytesInOutput": 136
@@ -1164,13 +1185,13 @@
           "bytesInOutput": 0
         },
         "dist/components/Title/Title.svelte.js": {
-          "bytesInOutput": 948
+          "bytesInOutput": 1421
         },
         "dist/components/MBTI/MBTI.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/MBTI/MBTI.svelte.js": {
-          "bytesInOutput": 716
+          "bytesInOutput": 1189
         },
         "dist/components/Perfumes/RecommendedPerfumes.svelte.css": {
           "bytesInOutput": 0
@@ -1194,7 +1215,7 @@
           "bytesInOutput": 0
         },
         "dist/components/Image/RoundedImage.svelte.js": {
-          "bytesInOutput": 614
+          "bytesInOutput": 622
         },
         "dist/components/Commons/Modal/PopupLong.svelte.js": {
           "bytesInOutput": 2115
@@ -1256,6 +1277,12 @@
         "dist/pages/Type.svelte.js": {
           "bytesInOutput": 2562
         },
+        "dist/components/Image/RoundedEmbed.svelte.css": {
+          "bytesInOutput": 0
+        },
+        "dist/components/Image/RoundedEmbed.svelte.js": {
+          "bytesInOutput": 623
+        },
         "dist/components/MailChimp.svelte.css": {
           "bytesInOutput": 0
         },
@@ -1272,13 +1299,16 @@
           "bytesInOutput": 139
         }
       },
-      "bytes": 142330
+      "bytes": 143867
     },
     "../~~bundle~~/dist/index.css": {
       "imports": [],
       "inputs": {
         "dist/components/App/App.svelte.css": {
           "bytesInOutput": 811
+        },
+        "dist/components/Image/RoundedEmbed.svelte.css": {
+          "bytesInOutput": 102
         },
         "dist/components/MailChimp.svelte.css": {
           "bytesInOutput": 42
@@ -1344,7 +1374,7 @@
           "bytesInOutput": 100
         }
       },
-      "bytes": 23517
+      "bytes": 23619
     }
   }
 }
